--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -90,6 +90,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
 
+                <ProgressBar
+                    android:id="@+id/orderItemsLoading"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_marginTop="10dp"
                     android:id="@+id/rvOrderItems"
