--- a/app/src/main/res/layout/item_chat_image_view_receive.xml
+++ b/app/src/main/res/layout/item_chat_image_view_receive.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
-            android:backgroundTint="@color/normal_button_color"
+            android:backgroundTint="@color/bg_color"
             android:elevation="0dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="14dp"
@@ -38,7 +38,7 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="18sp"
                     android:fontFamily="@font/satoshi_medium"
-                    android:textColor="@color/white"
+                    android:textColor="@color/title_text_color"
                     android:id="@+id/txtChatImageReceive"
                     android:text=" "
                     android:layout_width="wrap_content"
@@ -49,5 +49,14 @@
 
         </androidx.cardview.widget.CardView>
 
+        <TextView
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="4dp"
+            android:id="@+id/txtChatImageTimeReceive"
+            android:text="15:09 Pm"
+            android:textSize="10sp"
+            android:fontFamily="@font/satoshi_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
