--- a/app/src/main/res/layout/item_chat_image_view_sent.xml
+++ b/app/src/main/res/layout/item_chat_image_view_sent.xml
@@ -48,5 +48,15 @@
 
 
         </androidx.cardview.widget.CardView>
+        <TextView
+            android:layout_gravity="right"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="4dp"
+            android:id="@+id/txtChatImageTimeSent"
+            android:text="15:09 Pm"
+            android:textSize="10sp"
+            android:fontFamily="@font/satoshi_medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 </layout>
