--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -15,46 +15,47 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constMain"
-            android:animateLayoutChanges="true"
-            android:background="@color/white"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
+            android:background="@color/white">
 
             <com.google.android.material.appbar.AppBarLayout
                 android:id="@+id/appBar"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:background="@color/white"
                 android:elevation="0dp"
                 app:elevation="0dp"
-                android:background="@color/white"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="56dp">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
-                    android:weightSum="1"
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:weightSum="1">
 
                     <ImageView
+                        android:id="@+id/btnHamBurgur"
+                        android:layout_width="0dp"
+                        android:layout_height="30dp"
                         android:layout_gravity="center"
                         android:layout_weight="0.2"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
-                        android:id="@+id/btnHamBurgur"
-                        android:src="@drawable/ic_baseline_menu_24"
-                        android:layout_width="0dp"
-                        android:layout_height="30dp"/>
+                        android:src="@drawable/ic_baseline_menu_24" />
+
                     <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="left"
+                        android:layout_weight="0.6"
+                        android:clipToOutline="true"
                         android:paddingVertical="18dp"
                         android:paddingRight="110dp"
-                        android:layout_gravity="left"
-                        android:clipToOutline="true"
-                        android:src="@drawable/home_page_header"
-                        android:layout_weight="0.6"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"/>
+                        android:src="@drawable/home_page_header" />
 
                     <!--
                     <TextView
@@ -69,143 +70,146 @@
                         -->
 
                     <ImageView
+                        android:id="@+id/btnCart"
+                        android:layout_width="0dp"
+                        android:layout_height="28dp"
                         android:layout_gravity="center"
                         android:layout_weight="0.2"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
-                        android:id="@+id/btnCart"
-                        android:src="@drawable/ic_baseline_shopping_cart_24"
-                        android:layout_width="0dp"
-                        android:layout_height="28dp"/>
+                        android:src="@drawable/ic_baseline_shopping_cart_24" />
 
                 </LinearLayout>
 
             </com.google.android.material.appbar.AppBarLayout>
 
 
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/refreshHome"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appBar">
+
+
+
 
             <com.factor.bouncy.BouncyNestedScrollView
                 android:id="@+id/boucneScroll"
-                app:layout_constraintTop_toBottomOf="@id/appBar"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_width="match_parent"
-                android:layout_height="0dp">
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                >
+                android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_marginTop="2dp"
-                    android:id="@+id/linearSearchView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:weightSum="1">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-                    <EditText
-                        android:id="@+id/edSearch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginTop="6dp"
-                        android:layout_weight="0.9"
-                        android:background="@drawable/search_bar_bg"
-                        android:hint="Search Product Here.."
-                        android:paddingLeft="12dp"
-                        android:textColor="@color/title_text_color"
-                        android:textColorHint="@color/text_normal_color"
-                        android:textSize="12sp" />
-
-                    <ImageView
-                        android:id="@+id/btnSearch"
-                        android:layout_width="wrap_content"
-                        android:layout_height="24dp"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="4dp"
-                        android:layout_weight="0.1"
-                        android:clickable="true"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_baseline_search_24" />
-
-
-                </LinearLayout>
-
-                <com.facebook.shimmer.ShimmerFrameLayout
-                    android:id="@+id/shimmer_view"
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <include
-                        android:id="@+id/loadingPlaceHolder"
-                        layout="@layout/loading_home_place_holder"/>
-                </com.facebook.shimmer.ShimmerFrameLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/linearContent"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:visibility="gone"
-                    android:orientation="vertical"
-                    android:padding="16dp">
-
-                    <TextView
+                    <LinearLayout
+                        android:id="@+id/linearSearchView"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/satoshi_medium"
-                        android:text="Categories"
-
-                        android:textColor="@color/title_text_color"
-                        android:textSize="18sp" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvCategories"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="6dp"
+                        android:layout_marginTop="2dp"
                         android:orientation="horizontal"
-                        android:scrollbars="none"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/category_item_layout" />
+                        android:weightSum="1">
 
-                    <TextView
+                        <EditText
+                            android:id="@+id/edSearch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="40dp"
+                            android:layout_marginLeft="18dp"
+                            android:layout_marginTop="6dp"
+                            android:layout_weight="0.9"
+                            android:background="@drawable/search_bar_bg"
+                            android:hint="Search Product Here.."
+                            android:paddingLeft="12dp"
+                            android:textColor="@color/title_text_color"
+                            android:textColorHint="@color/text_normal_color"
+                            android:textSize="12sp" />
+
+                        <ImageView
+                            android:id="@+id/btnSearch"
+                            android:layout_width="wrap_content"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="4dp"
+                            android:layout_weight="0.1"
+                            android:clickable="true"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:src="@drawable/ic_baseline_search_24" />
+
+
+                    </LinearLayout>
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:id="@+id/shimmer_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center">
+
+                        <include
+                            android:id="@+id/loadingPlaceHolder"
+                            layout="@layout/loading_home_place_holder" />
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+                    <LinearLayout
+                        android:id="@+id/linearContent"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:fontFamily="@font/satoshi_medium"
-                        android:text="Products"
-                        android:textColor="@color/title_text_color"
-                        android:textSize="18sp" />
+                        android:layout_marginTop="4dp"
+                        android:orientation="vertical"
+                        android:padding="16dp"
+                        android:visibility="gone">
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        tools:listitem="@layout/item_products_main_layout"
-                        android:id="@+id/rvProductsMain"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                         />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/satoshi_medium"
+                            android:text="Categories"
+
+                            android:textColor="@color/title_text_color"
+                            android:textSize="18sp" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvCategories"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="6dp"
+                            android:orientation="horizontal"
+                            android:scrollbars="none"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/category_item_layout" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            android:fontFamily="@font/satoshi_medium"
+                            android:text="Products"
+                            android:textColor="@color/title_text_color"
+                            android:textSize="18sp" />
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvProductsMain"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/item_products_main_layout" />
+
+
+                    </LinearLayout>
 
 
                 </LinearLayout>
-
-
-            </LinearLayout>
 
 
             </com.factor.bouncy.BouncyNestedScrollView>
 
-
-
-
-
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
