--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -163,8 +163,14 @@
                         android:padding="16dp"
                         android:visibility="gone">
 
+                       >
+                        <alirezat775.lib.carouselview.CarouselView
+                            android:id="@+id/bannerCarousel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:layout_marginTop="6dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/satoshi_medium"
