--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -19,7 +19,18 @@
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:focusable="true">
+        android:focusable="true"
+        app:contentPadding="4dp">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/ivCategory"
+            android:layout_width="92dp"
+            android:layout_height="108dp"
+            android:layout_marginBottom="@dimen/margin_medium"
+            android:layout_margin="4dp"
+            android:scaleType="fitXY"
+            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"/>
+
         <TextView
             android:layout_marginVertical="6dp"
             android:layout_marginHorizontal="10dp"
@@ -27,9 +38,12 @@
             android:fontFamily="@font/satoshi_medium"
             android:textColor="@color/text_normal_color"
             android:textSize="14sp"
+            android:textStyle="bold"
             android:gravity="center"
             android:text="Poster"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            />
     </com.google.android.material.card.MaterialCardView>
 </layout>
