--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -10,7 +10,6 @@
         android:foreground="?attr/selectableItemBackground"
         android:id="@+id/cardCategory"
         android:clickable="true"
-        android:backgroundTint="@color/bg_color"
         app:cardCornerRadius="8dp"
         android:elevation="0dp"
         app:cardElevation="0dp"
@@ -22,28 +21,33 @@
         android:focusable="true"
         app:contentPadding="4dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/ivCategory"
-            android:layout_width="92dp"
-            android:layout_height="108dp"
-            android:layout_marginBottom="@dimen/margin_medium"
-            android:layout_margin="4dp"
-            android:scaleType="fitXY"
-            app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"/>
+       <androidx.appcompat.widget.LinearLayoutCompat
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:orientation="vertical">
 
-        <TextView
-            android:layout_marginVertical="6dp"
-            android:layout_marginHorizontal="10dp"
-            android:id="@+id/txtCategoryName"
-            android:fontFamily="@font/satoshi_medium"
-            android:textColor="@color/text_normal_color"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:text="Poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            />
+           <com.google.android.material.imageview.ShapeableImageView
+               android:id="@+id/ivCategory"
+               android:layout_width="92dp"
+               android:layout_height="108dp"
+               android:layout_marginHorizontal="4dp"
+               android:scaleType="fitCenter"
+               android:padding="@dimen/padding_medium"
+               app:shapeAppearance="@style/ShapeAppearanceOverlay.Material3.Chip"/>
+
+           <TextView
+               android:id="@+id/txtCategoryName"
+               android:fontFamily="@font/satoshi_medium"
+               android:textColor="@color/text_normal_color"
+               android:textSize="14sp"
+               android:textStyle="bold"
+               android:gravity="center"
+               android:text="Poster"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_gravity="bottom|center_horizontal"
+               />
+
+       </androidx.appcompat.widget.LinearLayoutCompat>
     </com.google.android.material.card.MaterialCardView>
 </layout>
