--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -42,7 +43,7 @@
                         android:layout_width="0dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center"
-                        android:layout_weight="0.2"
+                        android:layout_weight="0.15"
                         android:clickable="true"
                         android:foreground="?attr/selectableItemBackground"
                         android:src="@drawable/ic_baseline_menu_24" />
@@ -69,16 +70,33 @@
                         android:layout_height="match_parent"/>
                         -->
 
-                    <ImageView
-                        android:id="@+id/btnCart"
+                    <LinearLayout
+                        android:layout_weight="0.25"
                         android:layout_width="0dp"
-                        android:layout_height="28dp"
-                        android:layout_gravity="center"
-                        android:layout_weight="0.2"
-                        android:clickable="true"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_baseline_shopping_cart_24" />
+                        android:layout_height="match_parent"
+                        android:gravity="end">
 
+                        <ImageView
+                            android:id="@+id/btnCall"
+                            android:layout_width="36dp"
+                            android:layout_height="28dp"
+                            android:layout_marginEnd="12dp"
+                            android:padding="2dp"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:src="@drawable/ic_phone" />
+
+                        <ImageView
+                            android:id="@+id/btnCart"
+                            android:layout_width="36dp"
+                            android:layout_height="28dp"
+                            android:layout_marginEnd="12dp"
+                            android:layout_gravity="center"
+                            android:clickable="true"
+                            android:foreground="?attr/selectableItemBackground"
+                            android:src="@drawable/ic_baseline_shopping_cart_24" />
+                    </LinearLayout>
                 </LinearLayout>
 
             </com.google.android.material.appbar.AppBarLayout>
@@ -94,126 +112,125 @@
                 app:layout_constraintTop_toBottomOf="@id/appBar">
 
 
-
-
-            <com.factor.bouncy.BouncyNestedScrollView
-                android:id="@+id/boucneScroll"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <LinearLayout
+                <com.factor.bouncy.BouncyNestedScrollView
+                    android:id="@+id/boucneScroll"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent">
 
                     <LinearLayout
-                        android:id="@+id/linearSearchView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:orientation="horizontal"
-                        android:weightSum="1">
-
-                        <EditText
-                            android:id="@+id/edSearch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_marginLeft="18dp"
-                            android:layout_marginTop="6dp"
-                            android:layout_weight="0.9"
-                            android:background="@drawable/search_bar_bg"
-                            android:hint="Search Product Here.."
-                            android:paddingLeft="12dp"
-                            android:textColor="@color/title_text_color"
-                            android:textColorHint="@color/text_normal_color"
-                            android:textSize="12sp" />
-
-                        <ImageView
-                            android:id="@+id/btnSearch"
-                            android:layout_width="wrap_content"
-                            android:layout_height="24dp"
-                            android:layout_gravity="center"
-                            android:layout_marginTop="4dp"
-                            android:layout_weight="0.1"
-                            android:clickable="true"
-                            android:foreground="?attr/selectableItemBackground"
-                            android:src="@drawable/ic_baseline_search_24" />
-
-
-                    </LinearLayout>
-
-                    <com.facebook.shimmer.ShimmerFrameLayout
-                        android:id="@+id/shimmer_view"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_gravity="center">
+                        android:orientation="vertical">
 
-                        <include
-                            android:id="@+id/loadingPlaceHolder"
-                            layout="@layout/loading_home_place_holder" />
-                    </com.facebook.shimmer.ShimmerFrameLayout>
-
-
-                    <LinearLayout
-                        android:id="@+id/linearContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="4dp"
-                        android:orientation="vertical"
-                        android:padding="16dp"
-                        android:visibility="gone">
-
-                       >
-                        <alirezat775.lib.carouselview.CarouselView
-                            android:id="@+id/bannerCarousel"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <TextView
-                            android:layout_marginTop="6dp"
+                        <LinearLayout
+                            android:id="@+id/linearSearchView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/satoshi_medium"
-                            android:text="Categories"
-
-                            android:textColor="@color/title_text_color"
-                            android:textSize="18sp" />
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rvCategories"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="6dp"
+                            android:layout_marginTop="2dp"
                             android:orientation="horizontal"
-                            android:scrollbars="none"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            tools:listitem="@layout/category_item_layout" />
+                            android:weightSum="1">
 
-                        <TextView
+                            <EditText
+                                android:id="@+id/edSearch"
+                                android:layout_width="wrap_content"
+                                android:layout_height="40dp"
+                                android:layout_marginLeft="18dp"
+                                android:layout_marginTop="6dp"
+                                android:layout_weight="0.9"
+                                android:background="@drawable/search_bar_bg"
+                                android:hint="Search Product Here.."
+                                android:paddingLeft="12dp"
+                                android:textColor="@color/title_text_color"
+                                android:textColorHint="@color/text_normal_color"
+                                android:textSize="12sp" />
+
+                            <ImageView
+                                android:id="@+id/btnSearch"
+                                android:layout_width="wrap_content"
+                                android:layout_height="24dp"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="4dp"
+                                android:layout_weight="0.1"
+                                android:clickable="true"
+                                android:foreground="?attr/selectableItemBackground"
+                                android:src="@drawable/ic_baseline_search_24" />
+
+
+                        </LinearLayout>
+
+                        <com.facebook.shimmer.ShimmerFrameLayout
+                            android:id="@+id/shimmer_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center">
+
+                            <include
+                                android:id="@+id/loadingPlaceHolder"
+                                layout="@layout/loading_home_place_holder" />
+                        </com.facebook.shimmer.ShimmerFrameLayout>
+
+
+                        <LinearLayout
+                            android:id="@+id/linearContent"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            android:fontFamily="@font/satoshi_medium"
-                            android:text="Products"
-                            android:textColor="@color/title_text_color"
-                            android:textSize="18sp" />
+                            android:layout_marginTop="4dp"
+                            android:orientation="vertical"
+                            android:padding="16dp"
+                            android:visibility="gone">
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/rvProductsMain"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            tools:listitem="@layout/item_products_main_layout" />
+                            >
+
+                            <alirezat775.lib.carouselview.CarouselView
+                                android:id="@+id/bannerCarousel"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="6dp"
+                                android:fontFamily="@font/satoshi_medium"
+                                android:text="Categories"
+
+                                android:textColor="@color/title_text_color"
+                                android:textSize="18sp" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rvCategories"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="6dp"
+                                android:orientation="horizontal"
+                                android:scrollbars="none"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                tools:listitem="@layout/category_item_layout" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                android:fontFamily="@font/satoshi_medium"
+                                android:text="Products"
+                                android:textColor="@color/title_text_color"
+                                android:textSize="18sp" />
+
+                            <androidx.recyclerview.widget.RecyclerView
+                                android:id="@+id/rvProductsMain"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="10dp"
+                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                                tools:listitem="@layout/item_products_main_layout" />
+
+
+                        </LinearLayout>
 
 
                     </LinearLayout>
 
 
-                </LinearLayout>
-
-
-            </com.factor.bouncy.BouncyNestedScrollView>
+                </com.factor.bouncy.BouncyNestedScrollView>
 
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
